--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -12,7 +12,6 @@
     com.raywenderlich.placebook
 
     SHA-1 certificate fingerprint:
-    B0:DC:86:1A:4D:93:24:B8:AA:AF:5A:3D:C3:7F:F6:63:34:C0:75:7F
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -20,5 +19,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAUiQhMdHRn5i0kCmlbu7lN-SMoZp1X__Q</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">/string>
 </resources>
